[gd_scene load_steps=40 format=3 uid="uid://coq7wsmxvqnl4"]

[ext_resource type="PackedScene" uid="uid://c6m2oq7p4w3es" path="res://map/level1_map.tscn" id="1_ncw1r"]
[ext_resource type="Script" path="res://level/Level1.gd" id="1_ox58s"]
[ext_resource type="Texture2D" uid="uid://c4aqbth7m6l2p" path="res://tilemap_asset/16x16/kenney_tiny-ski/Tilemap/tilemap_packed.png" id="2_0w0rv"]
[ext_resource type="PackedScene" uid="uid://cobe4kjjssqqg" path="res://map/level_1_deco.tscn" id="2_htkx7"]
[ext_resource type="Script" path="res://label/giftAPointLabel.gd" id="3_cvem1"]
[ext_resource type="Script" path="res://label/giftBPointLabel.gd" id="4_ojdoh"]
[ext_resource type="FontFile" uid="uid://b4kp287dkplub" path="res://Assets/DungGeunMo.otf" id="4_w52rw"]
[ext_resource type="Script" path="res://label/giftCPointLabel.gd" id="6_4ao6h"]
[ext_resource type="PackedScene" uid="uid://c448hd5e21k6c" path="res://prison/prison.tscn" id="7_m0rf1"]
[ext_resource type="Script" path="res://label/PointLabel.gd" id="8_2vkl5"]
[ext_resource type="Texture2D" uid="uid://c23w0dt7tthdj" path="res://image/pinkgift.png" id="8_yfnqr"]
[ext_resource type="Texture2D" uid="uid://jytwkinw5l6w" path="res://image/greengift_new.png" id="9_821g1"]
[ext_resource type="PackedScene" uid="uid://drt65dvrqucg2" path="res://gift/giftC1.tscn" id="9_ehcnq"]
[ext_resource type="Texture2D" uid="uid://dpcllbige5uky" path="res://image/yellowgift_new.png" id="10_jq4ug"]
[ext_resource type="PackedScene" uid="uid://q7sp5k24te61" path="res://prison/interaction_manager.tscn" id="12_favbd"]
[ext_resource type="Texture2D" uid="uid://c80spr0qemryp" path="res://image/pinkchimney.png" id="12_n3nnq"]
[ext_resource type="PackedScene" uid="uid://5l4esc5rjrju" path="res://gift/giftA1.tscn" id="14_auglw"]
[ext_resource type="Texture2D" uid="uid://bi65j25nmian3" path="res://image/greenchimney.png" id="14_dpcsn"]
[ext_resource type="Texture2D" uid="uid://b4sq454jwuihq" path="res://image/orangechimney.png" id="16_s4jy2"]
[ext_resource type="Texture2D" uid="uid://br5is1oux4a5c" path="res://image/rudolph_crying.png" id="17_nrxcq"]
[ext_resource type="PackedScene" uid="uid://bvxjtlywx0kus" path="res://gift/giftB1.tscn" id="19_gqvql"]
[ext_resource type="Texture2D" uid="uid://c8sbdd0df4s4g" path="res://image/door.png" id="20_sdwhl"]
[ext_resource type="Script" path="res://prison/Deer1.gd" id="21_yfckg"]
[ext_resource type="Script" path="res://prison/Deer2.gd" id="23_kcqir"]
[ext_resource type="Script" path="res://prison/Deer3.gd" id="24_71m4n"]
[ext_resource type="Script" path="res://prison/Deer4.gd" id="25_8dlh2"]
[ext_resource type="PackedScene" uid="uid://kyi7t88opsbw" path="res://player/Player1.tscn" id="26_4e378"]
[ext_resource type="Script" path="res://prison/Deer5.gd" id="26_b83um"]
[ext_resource type="PackedScene" uid="uid://bqnj70b5dui6m" path="res://enemy_patrol/patrol1.tscn" id="27_6dtuc"]
[ext_resource type="PackedScene" uid="uid://dno3uobook8d6" path="res://enemy_patrol/patrol2.tscn" id="28_c1j72"]
[ext_resource type="PackedScene" uid="uid://wox1mtjb704v" path="res://enemy_patrol/patrol3.tscn" id="29_syki0"]
[ext_resource type="PackedScene" uid="uid://cklh1bwuydaro" path="res://enemy_patrol/patrol4.tscn" id="31_7ddeq"]
[ext_resource type="PackedScene" uid="uid://228m151n03bk" path="res://enemy_patrol/patrol5.tscn" id="32_kcllh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vtj1e"]
texture = ExtResource("2_0w0rv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_ru0f7"]
sources/0 = SubResource("TileSetAtlasSource_vtj1e")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfto7"]
size = Vector2(91.6642, 95.4519)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujv1h"]
size = Vector2(168.055, 173.611)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1kho7"]
size = Vector2(166.667, 173.076)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kufty"]
size = Vector2(43.0848, 35.2392)

[node name="Node2D" type="Node2D"]
position = Vector2(520, 3426)
scale = Vector2(0.72, 0.72)
script = ExtResource("1_ox58s")
metadata/_edit_horizontal_guides_ = []

[node name="level1_map2" parent="." instance=ExtResource("1_ncw1r")]
position = Vector2(-2206.94, -2372.22)
scale = Vector2(1.358, 1.332)

[node name="level1_deco" parent="." instance=ExtResource("2_htkx7")]

[node name="words" type="TileMap" parent="."]
position = Vector2(1083.33, 1079.17)
scale = Vector2(2.93107, 2.93107)
tile_set = SubResource("TileSet_ru0f7")
format = 2
layer_0/tile_data = PackedInt32Array(0, 196608, 8, 1, 262144, 8, 2, 720896, 8, 3, 524288, 8, 4, 589824, 9, 5, 262144, 8, 6, 327680, 9, 65537, 458752, 8, 65536, 458752, 9, 65538, 262144, 8, 65540, 393216, 8, 65541, 524288, 8, 65542, 327680, 8, 65543, 458752, 9, 65544, 393216, 9, 65545, 131072, 10)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="giftAPointLabel" type="Label" parent="CanvasLayer"]
offset_left = 96.0
offset_top = 143.0
offset_right = 237.0
offset_bottom = 201.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_w52rw")
theme_override_font_sizes/font_size = 40
text = "X1"
script = ExtResource("3_cvem1")

[node name="giftBPointLabel" type="Label" parent="CanvasLayer"]
offset_left = 96.0
offset_top = 201.0
offset_right = 283.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_w52rw")
theme_override_font_sizes/font_size = 40
text = "X1"
script = ExtResource("4_ojdoh")

[node name="giftCPointLabel" type="Label" parent="CanvasLayer"]
offset_left = 96.0
offset_top = 258.0
offset_right = 230.0
offset_bottom = 316.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_w52rw")
theme_override_font_sizes/font_size = 40
text = "X1"
script = ExtResource("6_4ao6h")

[node name="PointLabel" type="Label" parent="CanvasLayer"]
offset_left = 38.0
offset_top = 36.0
offset_right = 178.0
offset_bottom = 94.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_w52rw")
theme_override_font_sizes/font_size = 40
text = "Points:"
script = ExtResource("8_2vkl5")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 39.0
offset_top = 138.0
offset_right = 323.0
offset_bottom = 515.0
scale = Vector2(0.135, 0.135)
texture = ExtResource("8_yfnqr")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_left = 37.0
offset_top = 197.0
offset_right = 321.0
offset_bottom = 540.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("9_821g1")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer"]
offset_left = 36.0
offset_top = 254.0
offset_right = 321.0
offset_bottom = 585.0
scale = Vector2(0.165, 0.165)
texture = ExtResource("10_jq4ug")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 38.0
offset_top = 88.0
offset_right = 338.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_w52rw")
theme_override_font_sizes/font_size = 40
text = "Leftover Gifts:
"

[node name="Gifts" type="Node" parent="."]

[node name="GiftA1" parent="Gifts" groups=["gift"] instance=ExtResource("14_auglw")]
position = Vector2(1620, 4051)
collision_mask = 539
mass = 5.0
linear_damp = 5.0

[node name="GiftB1" parent="Gifts" groups=["gift"] instance=ExtResource("19_gqvql")]
position = Vector2(-14, 1589)
collision_layer = 32
collision_mask = 611
mass = 3.0
gravity_scale = 0.0
linear_damp = 5.0

[node name="GiftC1" parent="Gifts" groups=["gift"] instance=ExtResource("9_ehcnq")]
position = Vector2(195, 3435)
collision_layer = 128
collision_mask = 899
mass = 3.0
gravity_scale = 0.0
linear_damp = 5.0

[node name="GiftABox" type="Area2D" parent="."]
position = Vector2(1915.28, -402.777)
scale = Vector2(0.591375, 0.591375)
collision_layer = 16
collision_mask = 8

[node name="GiftABox" type="Sprite2D" parent="GiftABox"]
position = Vector2(0, 0.000488281)
scale = Vector2(0.248456, 0.248456)
texture = ExtResource("12_n3nnq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GiftABox"]
position = Vector2(-3.52881, 4.69824)
scale = Vector2(3.10021, 3.10021)
shape = SubResource("RectangleShape2D_bfto7")

[node name="GiftBBox" type="Area2D" parent="."]
position = Vector2(123.611, -2305.56)
collision_layer = 64
collision_mask = 33

[node name="GiftBBox" type="Sprite2D" parent="GiftBBox"]
position = Vector2(4.16669, 11.1108)
scale = Vector2(0.146, 0.146)
texture = ExtResource("14_dpcsn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GiftBBox"]
position = Vector2(2.08331, 14.5833)
shape = SubResource("RectangleShape2D_ujv1h")

[node name="GiftCBox" type="Area2D" parent="."]
position = Vector2(-343.056, -61.1108)
collision_layer = 256
collision_mask = 129

[node name="GiftCBox" type="Sprite2D" parent="GiftCBox"]
position = Vector2(455.322, -388.139)
rotation = -3.14159
scale = Vector2(0.146, 0.146)
texture = ExtResource("16_s4jy2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GiftCBox"]
position = Vector2(456.944, -392.093)
shape = SubResource("RectangleShape2D_1kho7")

[node name="Deer1" type="Sprite2D" parent="."]
position = Vector2(-2250, 477.778)
scale = Vector2(0.113966, 0.113966)
texture = ExtResource("17_nrxcq")
script = ExtResource("21_yfckg")

[node name="Prison" parent="." instance=ExtResource("7_m0rf1")]
position = Vector2(-2240.28, 484.722)
scale = Vector2(1.38889, 1.38889)

[node name="Deer2" type="Sprite2D" parent="."]
position = Vector2(-2796.54, -880.32)
scale = Vector2(0.113966, 0.113966)
texture = ExtResource("17_nrxcq")
script = ExtResource("23_kcqir")

[node name="Prison2" parent="." instance=ExtResource("7_m0rf1")]
position = Vector2(-2786.82, -873.375)
scale = Vector2(1.38889, 1.38889)

[node name="Deer3" type="Sprite2D" parent="."]
position = Vector2(-1231.26, -474.764)
scale = Vector2(0.113966, 0.113966)
texture = ExtResource("17_nrxcq")
script = ExtResource("24_71m4n")

[node name="Prison3" parent="." instance=ExtResource("7_m0rf1")]
position = Vector2(-1221.54, -467.819)
scale = Vector2(1.38889, 1.38889)

[node name="Deer4" type="Sprite2D" parent="."]
position = Vector2(-1352.1, -3678.93)
scale = Vector2(0.113966, 0.113966)
texture = ExtResource("17_nrxcq")
script = ExtResource("25_8dlh2")

[node name="Prison4" parent="." instance=ExtResource("7_m0rf1")]
position = Vector2(-1342.37, -3671.98)
scale = Vector2(1.38889, 1.38889)

[node name="Deer5" type="Sprite2D" parent="."]
position = Vector2(1861.79, -3678.93)
scale = Vector2(0.113966, 0.113966)
texture = ExtResource("17_nrxcq")
script = ExtResource("26_b83um")

[node name="Prison5" parent="." instance=ExtResource("7_m0rf1")]
position = Vector2(1871.51, -3671.98)
scale = Vector2(1.38889, 1.38889)

[node name="InteractionManager" parent="." instance=ExtResource("12_favbd")]

[node name="FinishArea" type="Area2D" parent="."]
position = Vector2(-3031.94, -4255.56)
collision_layer = 512

[node name="Sprite2D" type="Sprite2D" parent="FinishArea"]
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("20_sdwhl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishArea"]
position = Vector2(1.38892, 46.5281)
scale = Vector2(10.4445, 10.4445)
shape = SubResource("RectangleShape2D_kufty")

[node name="Player1" parent="." groups=["santa"] instance=ExtResource("26_4e378")]
z_index = 2
position = Vector2(1837.5, 870.833)
rotation = -0.00569615
scale = Vector2(1.16699, 1.16699)

[node name="patrol1" parent="." instance=ExtResource("27_6dtuc")]
z_index = 2
position = Vector2(-3291.67, -3863.89)

[node name="path1" type="Node2D" parent="."]

[node name="Marker2D1" type="Marker2D" parent="path1"]
position = Vector2(-2787.5, -3858.33)

[node name="Marker2D2" type="Marker2D" parent="path1"]
position = Vector2(-2762.5, -3326.39)

[node name="Marker2D3" type="Marker2D" parent="path1"]
position = Vector2(-3316.67, -3313.89)

[node name="Marker2D4" type="Marker2D" parent="path1"]
position = Vector2(-3301.39, -2205.56)

[node name="Marker2D5" type="Marker2D" parent="path1"]
position = Vector2(-1780.56, -2216.67)

[node name="Marker2D6" type="Marker2D" parent="path1"]
position = Vector2(-1781.94, -2263.89)

[node name="Marker2D7" type="Marker2D" parent="path1"]
position = Vector2(-3250, -2258.33)

[node name="Marker2D8" type="Marker2D" parent="path1"]
position = Vector2(-3276.39, -3268.06)

[node name="Marker2D9" type="Marker2D" parent="path1"]
position = Vector2(-2720.83, -3284.72)

[node name="Marker2D10" type="Marker2D" parent="path1"]
position = Vector2(-2737.5, -3808.33)

[node name="Marker2D11" type="Marker2D" parent="path1"]
position = Vector2(-3312.5, -3783.33)

[node name="Marker2D12" type="Marker2D" parent="path1"]
position = Vector2(-3288.89, -3858.33)

[node name="patrol2" parent="." instance=ExtResource("28_c1j72")]
z_index = 2
position = Vector2(-325, -3072.22)

[node name="path2" type="Node2D" parent="."]

[node name="Marker2D1" type="Marker2D" parent="path2"]
position = Vector2(-268.056, -2275)

[node name="Marker2D2" type="Marker2D" parent="path2"]
position = Vector2(-1270.83, -2225)

[node name="Marker2D3" type="Marker2D" parent="path2"]
position = Vector2(-1288.89, -3231.95)

[node name="Marker2D4" type="Marker2D" parent="path2"]
position = Vector2(-859.722, -3226.39)

[node name="Marker2D5" type="Marker2D" parent="path2"]
position = Vector2(-841.667, -3731.94)

[node name="Marker2D6" type="Marker2D" parent="path2"]
position = Vector2(218.056, -3702.78)

[node name="Marker2D7" type="Marker2D" parent="path2"]
position = Vector2(218.055, -2372.22)

[node name="Marker2D8" type="Marker2D" parent="path2"]
position = Vector2(1854.17, -2243.06)

[node name="Marker2D9" type="Marker2D" parent="path2"]
position = Vector2(1819.44, -1325)

[node name="Marker2D10" type="Marker2D" parent="path2"]
position = Vector2(218.055, -1295.83)

[node name="Marker2D11" type="Marker2D" parent="path2"]
position = Vector2(206.944, -895.833)

[node name="Marker2D12" type="Marker2D" parent="path2"]
position = Vector2(895.833, -877.778)

[node name="Marker2D13" type="Marker2D" parent="path2"]
position = Vector2(1001.39, -748.611)

[node name="Marker2D14" type="Marker2D" parent="path2"]
position = Vector2(254.167, -777.778)

[node name="Marker2D15" type="Marker2D" parent="path2"]
position = Vector2(248.611, -1390.28)

[node name="Marker2D16" type="Marker2D" parent="path2"]
position = Vector2(1811.11, -1427.78)

[node name="Marker2D17" type="Marker2D" parent="path2"]
position = Vector2(1811.11, -2194.44)

[node name="Marker2D18" type="Marker2D" parent="path2"]
position = Vector2(231.944, -2302.78)

[node name="Marker2D19" type="Marker2D" parent="path2"]
position = Vector2(150, -3611.11)

[node name="Marker2D20" type="Marker2D" parent="path2"]
position = Vector2(-798.611, -3663.89)

[node name="Marker2D21" type="Marker2D" parent="path2"]
position = Vector2(-856.944, -3144.44)

[node name="Marker2D22" type="Marker2D" parent="path2"]
position = Vector2(-1302.78, -3159.72)

[node name="Marker2D23" type="Marker2D" parent="path2"]
position = Vector2(-1334.72, -2226.39)

[node name="Marker2D24" type="Marker2D" parent="path2"]
position = Vector2(-270.833, -2241.67)

[node name="patrol3" parent="." instance=ExtResource("29_syki0")]
z_index = 2
position = Vector2(218.056, 523.611)

[node name="path3" type="Node2D" parent="."]

[node name="Marker2D1" type="Marker2D" parent="path3"]
position = Vector2(255.556, 559.722)

[node name="Marker2D2" type="Marker2D" parent="path3"]
position = Vector2(-1779.17, 556.944)

[node name="Marker2D3" type="Marker2D" parent="path3"]
position = Vector2(-1809.72, -518.056)

[node name="Marker2D4" type="Marker2D" parent="path3"]
position = Vector2(-2351.39, -512.5)

[node name="Marker2D5" type="Marker2D" parent="path3"]
position = Vector2(-2365.28, 36.1113)

[node name="Marker2D6" type="Marker2D" parent="path3"]
position = Vector2(-3306.94, 48.6113)

[node name="Marker2D7" type="Marker2D" parent="path3"]
position = Vector2(-3300, -11.1108)

[node name="Marker2D8" type="Marker2D" parent="path3"]
position = Vector2(-2226.39, 6.94434)

[node name="Marker2D9" type="Marker2D" parent="path3"]
position = Vector2(-2244.44, -458.333)

[node name="Marker2D10" type="Marker2D" parent="path3"]
position = Vector2(-1752.78, -437.5)

[node name="Marker2D11" type="Marker2D" parent="path3"]
position = Vector2(-1723.61, 461.111)

[node name="Marker2D12" type="Marker2D" parent="path3"]
position = Vector2(262.5, 476.389)

[node name="patrol4" parent="." instance=ExtResource("31_7ddeq")]
z_index = 2
position = Vector2(-2815.28, -1852.78)

[node name="path4" type="Node2D" parent="."]

[node name="Marker2D1" type="Marker2D" parent="path4"]
position = Vector2(-2826.39, -1312.5)

[node name="Marker2D2" type="Marker2D" parent="path4"]
position = Vector2(-1780.56, -1319.44)

[node name="Marker2D3" type="Marker2D" parent="path4"]
position = Vector2(-1773.61, -1890.28)

[node name="Marker2D4" type="Marker2D" parent="path4"]
position = Vector2(-1194.44, -1881.94)

[node name="Marker2D5" type="Marker2D" parent="path4"]
position = Vector2(-1187.5, -873.611)

[node name="Marker2D6" type="Marker2D" parent="path4"]
position = Vector2(-1247.22, -881.944)

[node name="Marker2D7" type="Marker2D" parent="path4"]
position = Vector2(-1291.67, -1852.78)

[node name="Marker2D8" type="Marker2D" parent="path4"]
position = Vector2(-1291.67, -1748.61)

[node name="Marker2D9" type="Marker2D" parent="path4"]
position = Vector2(-1722.22, -1808.33)

[node name="Marker2D10" type="Marker2D" parent="path4"]
position = Vector2(-1722.22, -1311.11)

[node name="Marker2D11" type="Marker2D" parent="path4"]
position = Vector2(-2790.28, -1326.39)

[node name="Marker2D12" type="Marker2D" parent="path4"]
position = Vector2(-2797.22, -1823.61)

[node name="patrol5" parent="." instance=ExtResource("32_kcllh")]
z_index = 2
position = Vector2(880.555, -295.833)

[node name="path5" type="Node2D" parent="."]

[node name="Marker2D1" type="Marker2D" parent="path5"]
position = Vector2(658.333, 29.1665)

[node name="Marker2D2" type="Marker2D" parent="path5"]
position = Vector2(651.389, -575)

[node name="Marker2D3" type="Marker2D" parent="path5"]
position = Vector2(1176.39, -577.778)

[node name="Marker2D4" type="Marker2D" parent="path5"]
position = Vector2(1183.33, 19.4443)

[node name="Marker2D5" type="Marker2D" parent="path5"]
position = Vector2(1205.56, -15.2778)

[node name="Marker2D6" type="Marker2D" parent="path5"]
position = Vector2(670.833, -34.7222)

[node name="Marker2D7" type="Marker2D" parent="path5"]
position = Vector2(1048.61, -347.222)

[node name="Marker2D8" type="Marker2D" parent="path5"]
position = Vector2(680.555, -552.778)

[connection signal="complete_giftA" from="CanvasLayer/giftAPointLabel" to="Player1" method="_on_gift_a_point_label_complete_gift_a"]
[connection signal="giftApointUp" from="CanvasLayer/giftAPointLabel" to="CanvasLayer/PointLabel" method="_on_gift_a_point_label_gift_apoint_up"]
[connection signal="complete_giftB" from="CanvasLayer/giftBPointLabel" to="Player1" method="_on_gift_b_point_label_complete_gift_b"]
[connection signal="giftBpointUp" from="CanvasLayer/giftBPointLabel" to="CanvasLayer/PointLabel" method="_on_gift_b_point_label_gift_bpoint_up"]
[connection signal="complete_giftC" from="CanvasLayer/giftCPointLabel" to="Player1" method="_on_gift_c_point_label_complete_gift_c"]
[connection signal="giftCpointUp" from="CanvasLayer/giftCPointLabel" to="CanvasLayer/PointLabel" method="_on_gift_c_point_label_gift_cpoint_up"]
[connection signal="body_entered" from="Gifts/GiftA1" to="Player1" method="_on_gift_a_1_body_entered"]
[connection signal="giftA_collected" from="Gifts/GiftA1" to="CanvasLayer/giftAPointLabel" method="_on_gift_a_1_gift_a_collected"]
[connection signal="giftB_collected" from="Gifts/GiftB1" to="CanvasLayer/giftBPointLabel" method="_on_gift_b_1_gift_b_collected"]
[connection signal="giftC_collected" from="Gifts/GiftC1" to="CanvasLayer/giftCPointLabel" method="_on_gift_c_1_gift_c_collected"]
[connection signal="body_entered" from="GiftABox" to="Gifts/GiftA1" method="_on_gift_a_box_body_entered"]
[connection signal="body_entered" from="GiftBBox" to="Gifts/GiftB1" method="_on_gift_b_box_body_entered"]
[connection signal="body_entered" from="GiftCBox" to="Gifts/GiftC1" method="_on_red_box_body_entered"]
[connection signal="body_entered" from="GiftCBox" to="Gifts/GiftC1" method="_on_gift_c_box_body_entered"]
[connection signal="complete_animate1" from="Deer1" to="Deer1" method="_on_complete_animate_1"]
[connection signal="complete_animate1" from="Deer2" to="Deer2" method="_on_complete_animate_1"]
[connection signal="complete_animate1" from="Deer3" to="Deer3" method="_on_complete_animate_1"]
[connection signal="complete_animate1" from="Deer4" to="Deer4" method="_on_complete_animate_1"]
[connection signal="complete_animate1" from="Deer5" to="Deer5" method="_on_complete_animate_1"]
[connection signal="body_entered" from="FinishArea" to="Player1" method="_on_finish_area_body_entered"]
[connection signal="resquePrison1" from="Player1" to="Deer1" method="_on_player_1_resque_prison_1"]
[connection signal="resquePrison2" from="Player1" to="Deer2" method="_on_player_1_resque_prison_2"]
[connection signal="resquePrison3" from="Player1" to="Deer3" method="_on_player_1_resque_prison_3"]
[connection signal="resquePrison4" from="Player1" to="Deer4" method="_on_player_1_resque_prison_4"]
[connection signal="resquePrison5" from="Player1" to="Deer5" method="_on_player_1_resque_prison_5"]
[connection signal="rudolph_rescued" from="Player1" to="CanvasLayer/PointLabel" method="_on_player_1_rudolph_rescued"]
